--- a/Dockerfile.tmpl
+++ b/Dockerfile.tmpl
@@ -17,7 +17,7 @@ RUN apt-get update && apt-get -y -q install \
     python-distribute \
     python-pip \
 	&& apt-get clean && rm -rf /var/lib/apt/lists/*
-RUN pip install --upgrade pip
+RUN python -m pip install --upgrade pip
 RUN pip install pyCLI==2.0.3 psutil==4.2.0 requests==2.10.0 python-json-logger==0.1.5
 
 # Copy logger script
