--- a/Dockerfile.tmpl
+++ b/Dockerfile.tmpl
@@ -18,7 +18,7 @@ RUN apt-get update && apt-get -y -q install \
     python-pip \
 	&& apt-get clean && rm -rf /var/lib/apt/lists/*
 
-RUN pip install pyCLI= psutil==4.2.0 requests==2.10.0 python-json-logger==0.1.5
+RUN pip install pyCLI psutil==4.2.0 requests==2.10.0 python-json-logger==0.1.5
 
 # Copy logger script
 #
